# astro-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-26-astro-api-design.md  2026-04-27-astro-api-phase-2-tasks.md  2026-04-27-astro-api-phase-2.md
src/astro_api/: auth.py  charts.py  geocoding.py  main.py  schemas.py  settings.py
tests/: conftest.py  test_auth.py  test_geocoding.py  test_healthz.py  test_main.py  test_natal.py  test_progressions.py  test_schemas.py  test_sky.py  test_snapshot.py  test_solar_return.py  test_synastry.py  test_transits.py  test_v2_endpoints.py
tests/fixtures/: known_charts.json
